# bedrock-code-assistant

./: .coverage  .env.example  .gitignore  AWS_NATIVE_ASSESSMENT.md  MODERNIZATION_PLAN.md  MY_AWS_NATIVE_OPINION.md  PUSH_INSTRUCTIONS.txt  README.md  SETUP_SUMMARY.md  STATUS.md  V1_1_FEATURES.md  V1_2_UPDATES.md  V1_3_FEATURES.md  V1_COMPLETE.txt  __init__.py  bedrock_copilot_policy.json  config.example.json  conversation_session.json  helloworld.py  implementation_plan.md  konuşma  main.py  push_phase6.bat  pyproject.toml  requirements.txt  sample_code.txt  test_argparse.py  test_map_system.py  test_mapping.py  test_suggestions_output.txt  test_v3_features.py
commands/: __init__.py  parser.py
config/: __init__.py  settings.py
core/: __init__.py  agent_memory.py  agent_pool.py  agent_specialization.py  agent_tools.py  aws_client.py  conversation.py  map_coordinator.py  repository_analyzer.py
data/chroma_db/: chroma.sqlite3
data/sessions/: test.json  test2.json  test3.json
docs/: CLI.md  README.md  WEB_UI.md
docs/reports/: AWS_NATIVE_DEPLOYMENT.md  AWS_NATIVE_GUIDE.md  CODE_ANALYSIS_REPORT.md  MODERNIZATION_COMPLETE.md  PHASE6_COMPLETE.md  PRODUCT_RISK_REPORT.md  PROJECT_ANALYSIS_REPORT.md  PUSH_INSTRUCTIONS.md  RISK_TODO_LIST.md  SESSION_COMPLETE_SUMMARY.md  TESTING_AND_FIXES_SUMMARY.md  TODO_LIST_COMPLETE.md  agent_read_file_impl.md  feature_qa_report.md  pm_vulnerability_report.md
docs/reports/roadmaps/: bedrock_copilot_engine_services_roadmap.md  bedrock_copilot_tools_roadmap.md  bedrock_copilot_ui_components_roadmap.md  real_life_copilot_roadmap.md  rl_copilot_full_file_map.md
docs/roadmap/: agent_read_file_fix.md
scripts/: generate_full_map.py  push_phase6.sh  run_benchmark.py
src/: main.py  web_api.py
src/config/: settings.py
src/core/: executor.py
src/core/agent/: __init__.py  orchestrator.py  prompts.py  terminal.py  tools.py
src/core/analysis/: call_graph.py
src/core/code_map/: __init__.py  code_mapper.py  languages.py  symbols.py
src/core/code_map/context/: __init__.py  builder.py  selector.py
src/core/code_map/graph/: __init__.py  indexer.py  symbol_graph.py
src/core/code_map/parser/: __init__.py  base.py  fallback_parser.py  treesitter_parser.py
src/core/features/: agent_feedback.py  agent_qa.py
src/core/mapping/: __init__.py  exceptions.py  model_entry.py  models_catalog.py  registry.py
src/core/security/: aws_native_config.py  config.py  cost_monitor.py  credential_chain.py  docker_sandbox.py  hitl_gate.py  rate_limiter.py  sso_integration.py
src/core/storage/: thread_safety.py  vector_memory_db.py
src/data/chroma_db/: chroma.sqlite3
src/data/sessions/: chat_20260421073651.json
src/static/: app.js  index.html  style.css
tests/: benchmark_vs_raw_api.py  pm_critical_probe.py  test_aws_native_phase6.py
tests/hardened/: test_aws_native.py  test_v3_5.py  test_v4_0.py
tests/integration/: test_agent_workflow.py  test_workflow.py
tests/unit/: test_agent_orchestrator.py  test_agent_tools.py  test_code_mapper_integration.py  test_context_selector.py  test_docker_sandbox_security.py  test_executor.py  test_features.py  test_mapping_integration.py  test_model_entry.py  test_registry.py  test_security.py  test_symbol_graph.py  test_treesitter_parser.py
utils/: __init__.py  autocomplete.py  command.py  file_reader.py  keyboard.py  output.py  suggestions.py  ui.py
